# rag-pipeline

./: .gitignore  README.md  chunker.py  config.yaml  embedder.py  extractor.py  indexer.py  ingest.py  main.py  pipeline.py  pyproject.toml  query.py  server.py
.claude/: launch.json
docs/: sample.txt
shared/: models.py
